--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,8 @@
 ---
-name: Netlify Deploy
+name: Netlify Deploy Pre-rendered Site
 author: Data Intuitive
 description: |
-  A wrapper for the "netlify deploy" command, used for deploying pre-rendered site to Netlify.
-  See the [Netlify reference documentation](https://cli.netlify.com/commands/deploy/#nodejs-function-entry-points) for more information.
-
-  Note: This action does not perform a build of the static website and assumes the directory is ready to be deployed as is.
+  Deploy a pre-rendered site to Netlify.
 inputs:
   auth:
     description: Netlify auth token to deploy with. Generate the auth token [here](https://app.netlify.com/user/applications#personal-access-tokens).
