Remove debug output

--- a/action.yml
+++ b/action.yml
@@ -84,13 +84,12 @@ runs:
         fi
 
         TEMP_JSON="${{runner.temp}}/output.json"
-        netlify deploy --json --debug "${ARGS[@]}" | tee "$TEMP_JSON"
+        netlify deploy --json "${ARGS[@]}" | tee "$TEMP_JSON"
 
-        sed -i '/^\s*$/d' "$TEMP_JSON"
         echo "START:"
         cat "$TEMP_JSON"
         echo "END"
-        jq --version
+        
         jq -r '"site-name=" + .site_name' "$TEMP_JSON" >> $GITHUB_OUTPUT
         jq -r '"deploy-id=" + .deploy_id' "$TEMP_JSON" >> $GITHUB_OUTPUT
         jq -r '"deploy-url=" + .deploy_url' "$TEMP_JSON" >> $GITHUB_OUTPUT
