--- a/action.yml
+++ b/action.yml
@@ -84,7 +84,7 @@ runs:
         fi
 
         TEMP_JSON="${{runner.temp}}/output.json"
-        netlify deploy --json --debug "${ARGS[@]}" | tee "$TEMP_JSON"
+        netlify deploy --json "${ARGS[@]}" | tee "$TEMP_JSON"
 
         jq -r '"site-name=" + .site_name' "$TEMP_JSON" >> $GITHUB_OUTPUT
         jq -r '"deploy-id=" + .deploy_id' "$TEMP_JSON" >> $GITHUB_OUTPUT
